fixes spacing issue with button

--- a/client/public/assets/css.css
+++ b/client/public/assets/css.css
@@ -203,8 +203,6 @@ body {
 }
 
 .country-info-button {
-	margin-top: 1em;
-	opacity: 1;
 	color: black;
 	background-color: #c1baba;
 	border: none;
